[FIX] web_responsive: Fix several issues * one2many tags now not hidden behind inputs. * Drawer icons now with much better look. * No overflow bug in small views when closing drawer. * Documented it when resizing viewport. (+1 squashed commit) * Whitespace cleanup.

--- a/web_app_drawer/static/src/less/navbar.less
+++ b/web_app_drawer/static/src/less/navbar.less
@@ -27,12 +27,7 @@ a.navbar-collapse.collapse {
     overflow-x: hidden;
 }
 
-.badge {
-    position: absolute;
-    right: @app-drawer-padding-horizontal;
-}
-
-@media (max-width: @screen-sm - 1px) {
+@media (max-width: @screen-xs-max) {
     #odooMenuBarNav[aria-expanded="false"] {
         /* Hack to hide the visibly expanded mobile menu on load. */
         position: absolute;
